--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,14 @@ dependencies {
     //glide
     compile 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+
+    // MaterialDrawer
+    implementation("com.mikepenz:materialdrawer:6.0.2@aar") {
+        transitive = true
+    }
+    //required support lib modules
+    implementation "com.android.support:appcompat-v7:25.4.0"
+    implementation "com.android.support:recyclerview-v7:25.4.0"
+    implementation "com.android.support:support-annotations:27.0.2"
+    implementation 'com.android.support:design:25.4.0'
 }
