--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:screenOrientation="portrait" />
         <activity android:name=".activity.AddAccountActivity" />
         <activity android:name=".activity.ManageAccountActivity" />
-        <activity android:name=".activity.SendActivity" />
+        <activity android:name=".activity.SendActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".activity.DetailActivity"></activity>
     </application>
 
